fixed orientation changes on mobile

--- a/style.css
+++ b/style.css
@@ -235,4 +235,23 @@ canvas {
     width: 100%;
     height: 100%;
   }
+
+  @media (orientation: landscape) {
+    #portrait {
+        display: none !important;
+    }
+    #game_container {
+        display: flex !important;
+    }
+}
+
+/* Portrait orientation styles */
+@media (orientation: portrait) {
+    #portrait {
+        display: flex !important;
+    }
+    #game_container {
+        display: none !important;
+    }
+}
 }
